--- a/1-RBasics.qmd
+++ b/1-RBasics.qmd
@@ -28,10 +28,13 @@ Numbers can be used to do arithmetic.
 ```
 
 (@) You try, multiple two numbers. 
-
-
+```{r}
+12 * 10.9967
+```
 (@) Can you multiply two numbers and then divide by the result? 
-
+```{r}
+46 * 103 / 2
+```
 The next type of value is a **string**. Strings are lines of text. Sometimes these are referred to as character vectors. To create a string, you add text between two quotation marks. For example: 
 ```{r}
 "Go Tigers"
@@ -39,7 +42,7 @@ The next type of value is a **string**. Strings are lines of text. Sometimes the
 
 (@) Try to create your own string.
 ```{r}
-
+"My cat is Fiona"
 ```
 
 You can't add strings using `+` like you can numbers. But there is a function called `paste()` which concatenates character vectors into one. This function is _very_ useful and one you'll use a lot in a variety of circumstances. Here's what that looks like: 
@@ -50,12 +53,12 @@ paste("Hello", "Clemson Graduate Students")
 
 (@) Try it, add two strings together like the above example. 
 ```{r}
-
+paste("My cat is Fiona,", "and my dogs are Jack and Bean")
 ```
 
 (@) Can you explain what happened in 2-3 sentences? 
 
-> 
+> Using the paste function, I can add two strings together. For this practice, I combined a sentence fragment about my cat with a sentence fragment about my dogs. 
 
 The last type are **logical** values like `TRUE` and `FALSE`. (Note that these are all caps.)
 
@@ -95,16 +98,18 @@ Logical Operators allow you to combine or change the results of comparisons.
 ```
 (@) Explain, what does the code on each line above do? 
 
->
+> The first line tests if 5 is equal to 10; it is not, so it returns as FALSE. The second line tests if 3 is less than 4, which is TRUE. The third line, 5 !=10 tests if 5 is unequal to 10; TRUE. The fourth line tests if 5 is unequal to 5; FALSE. the fifth line tests if 3 is equal to 4 OR 3; TRUE. The final line tests to see if 3 is unequal to 4 and 5; TRUE. 
 
 (@) Create your own comparison. 
 ```{r}
-
+13 != 20
+17 == 2 | 17 
 ```
 
 (@) Can you write code that checks if a year is between 1970 AND 1980? 
 ```{r}
-
+1972 > 1970 & 1972 < 1980
+1901 > 1970 & 1901 < 1980
 ```
 
 ---
