completed variables section on worksheet 1

--- a/1-RBasics.qmd
+++ b/1-RBasics.qmd
@@ -145,13 +145,13 @@ Whatever you prefer, be consistent and your future self will thank you when your
 (@) You try, create a variable and assign it a number: 
 
 ```{r}
-
+bean.age <- 3.5
 ```
 
 (@) Can you assign a string to a variable?
 
 ```{r}
-
+fiona <- "is nicknamed fart"
 ```
 
 Once we've assigned a variable we can use that variable to run calculations just like we did with raw numbers.
@@ -173,22 +173,27 @@ My.Calculation <- (x + x)*10
 
 (@) You try. Assign a number to x and a number to y. Add those two numbers together.
 ```{r}
-
+x <- 25
+y <- 3
 ```
 
 (@) Can you take `x` and `y` and multiply the result by 5? 
 ```{r}
-
+(x + y) * 5
 ```
 
 (@) Try creating two variables with names other than `x ` and `y`. Descriptive names tend to be more useful. Can you multiply the contents of your variables? 
 ```{r}
-
+jack.age <- 8
+fiona.age <- 6
+fiona.age * jack.age
 ```
 
 (@) Try creating two variables that store strings. Can you concatenate those two variables together? 
 ```{r}
-
+bean.fur <- "white and spotted"
+jack.fur <- "brown, black, grey, and wiry"
+paste(jack.fur, bean.fur)
 ```
 
 ### Vectors
