completed subsetting matrices section on worksheet 2

--- a/2-DataStructures.qmd
+++ b/2-DataStructures.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Worksheet 2: Data Structures"
-author: ""
-date: ""
+author: "Emma Stewart"
+date: "2/3/26"
 ---
 
 _This is the second in a series of worksheets for History 8500 at Clemson University. The goal of these worksheets is simple: practice, practice, practice. The worksheet introduces concepts and techniques and includes prompts for you to practice in this interactive document. When you are finished, you should change the author name (above), render your document to a pdf, and upload it to canvas. Don't forget to commit your changes as you go and push to github when you finish the worksheet._
@@ -41,7 +41,11 @@ x[c(3,3)]
 ```
 (@) Create your own vector and return three values using the subsetting method above. 
 ```{r}
-
+b <- c(4, 7, 16.7, 2, 25)
+b
+b[order(b)]
+b[c(4,5)]
+b[c(1,1)]
 ```
 
 
@@ -52,7 +56,7 @@ x[-c(3, 1)]
 
 (@) What happened here? Describe this in your own words. 
 
->
+>By using a negative, this code informed R to exclude the numbers in positions 1 and 3. 
 
 You can use either positive or negative integers to subset a vector but you **cannot mix the two**.
 
@@ -69,7 +73,7 @@ x[x > 7]
 
 (@) What is going on in each of the lines above? Describe it in your own words. 
 
->
+>First, we assigned logical values to each variable in the vector. When that code was entered, only the true values were printed. Then, we used the code to ask R to print out all the values that are greater than 7. 
 
 Nothing returns the original vector. This isn't that useful here but can come in handy when you have more complex structures like matrices and arrays. 
 ```{r}
@@ -82,6 +86,7 @@ If your vector is named, you can also use character vectors to return elements w
 y[c("d")]
 ```
 (@) What happened here? Explain this in your own words. 
+  Here, we assigned names to each element. The names were letters, and we only assigned them to the first four elements. Then, we queried R to print the element we named "d," and it returned the fourth element, 8.35. 
 
 #### Matrices
 
@@ -98,12 +103,13 @@ In the `matrix()` function:
 
 (@) You try now, create a matrix that had five rows with numbers that range from 25 to 49. 
 ```{r}
-
+matrix(25:49, byrow = TRUE, nrow = 5)
 ```
 
 (@) Can you create a matrix that has 3 rows with only even numbers from 2 to 18? 
 ```{r}
-
+a <- seq(2, 18, by=2)
+matrix(a, byrow=TRUE, nrow=3)
 ```
 
 ##### Subsetting Matricies 
@@ -142,43 +148,49 @@ data("gayguides")
 
 To subset this data we could pull two particular columns like this: 
 ```{r}
-#gayguides[2:3]
+gayguides[2:3]
 ```
 That returns columns 2 and 3 (including every single row!). 
 
 If we use two indices it'll behave more like a matrix. 
 ```{r}
 gayguides[1:3,]
+str(gayguides)
 ```
 
 (@) Why is this different? What do we get compared to the previous example? 
-
+In the first example, we tell R to print a range of columns, from 2-3. Because we do not specify the rows, it prints all the rows. In the second example, we tell R to print rows 1-3 but don't specify which columns. Therefore, we get the first three rows and all the columns. 
 >
 
 (@) Can you find just the city and state for the first 5 entries? 
 ```{r}
-
+head(gayguides[8:9])
+or 
+gayguides[1:5,8:9]
 ```
 
 (@) How about the street address and type for rows 2,555 to 2,560?
 
 ```{r}
-
+gayguides[2555:2560, 5:6]
 ```
 
 (@) Load another dataset from `DigitalMethodsData`. Subset it to find some element of the data. Write the code below and then explain what element of the data you wanted to subset and why:
 ```{r}
+data(BostonWomenVoters)
+str(BostonWomenVoters)
+head(BostonWomenVoters[,16:17])
 
 ```
 
-> 
+> Here, I queried to find only the Occupation and Place of Business of the first five women in the dataset to get a sense of the kinds of work they were doing and where. 
 
 Another useful operator to know is `$` which we used a little bit in the previous worksheet. `$` is shorthand for accessing a variable in a dataframe. 
  
 So for example both of these produce the same result. One is just easier to type. Because the output here is so large, I've commented these two lines out. Uncomment them and the run the block.
 ```{r R.options=list(max.print=10)}
-#gayguides["title"]
-#gayguides$title
+gayguides["title"]
+gayguides$title
 ```
 
 Notice the above output is _huge_. We can combine `$` and `[` to drill down more specifically like we did earlier.
@@ -186,13 +198,15 @@ Notice the above output is _huge_. We can combine `$` and `[` to drill down more
 gayguides$city[100:110]
 ```
 
-(@) What does this code do? 
+(@) What does this code do?
 
->
+> This code returns only the city column for rows 100 to 110.
 
 (@) Can you find all the titles of locations in South Carolina? (Hint: You'll need to use both `$` and `[]`)
 ```{r}
-
+sc <- gayguides$state=="SC"
+nrow(gayguides[sc,])
+gayguides$title[gayguides$state=="SC"]
 ```
 
 We can also use `$` to create a new column in `gayguides`. 
