completed worksheet 2, including challenges

--- a/2-DataStructures.qmd
+++ b/2-DataStructures.qmd
@@ -143,7 +143,10 @@ These skills are important because dataframes have the characteristics of both l
 So lets load the Gay guides data from our class pacakge. 
 ```{r}
 library(DigitalMethodsData)
+
 data("gayguides")
+
+
 ```
 
 To subset this data we could pull two particular columns like this: 
@@ -159,8 +162,8 @@ str(gayguides)
 ```
 
 (@) Why is this different? What do we get compared to the previous example? 
-In the first example, we tell R to print a range of columns, from 2-3. Because we do not specify the rows, it prints all the rows. In the second example, we tell R to print rows 1-3 but don't specify which columns. Therefore, we get the first three rows and all the columns. 
->
+
+>In the first example, we tell R to print a range of columns, from 2-3. Because we do not specify the rows, it prints all the rows. In the second example, we tell R to print rows 1-3 but don't specify which columns. Therefore, we get the first three rows and all the columns. 
 
 (@) Can you find just the city and state for the first 5 entries? 
 ```{r}
@@ -245,13 +248,23 @@ Hint: Break this into steps:
    - Step 4: Use this combined condition to subset the data
 ```{r}
 ca.locations <- gayguides$state=="CA"
+library(DigitalMethodsData)
+data(gayguides)
 
-year_1970s <- gayguides$Year>=1970 & gayguides$Year<=1979
+gg_70s <- gayguides[gayguides$Year>=1970 & gayguides$Year<=1979,]
+print(gg_70s)
+gg_ca_70s <- gg1970s[gg1970s$state=="CA",]
+#this works 
+print(gg_ca_70s)
 
-gg.ca <- gayguides[ca.locations,]
-gg.1970s <- gayguides[year_1970s,]
+#but this could also work 
+gg_70s <- gayguides$Year>=1970 & gayguides$Year<=1979
+gg_ca <- gayguides$state=="CA"
+ca70s <- gg_ca & gg_70s
+cali70s <- gayguides[ca70s,]
 
-
+#or this 
+alsocali70s <- gayguides[gayguides$state=="CA" & gayguides$Year>=1970 & gayguides$Year<=1979,]
 
 ```
 
@@ -259,20 +272,23 @@ gg.1970s <- gayguides[year_1970s,]
 ```{r}
 # Hint: You'll need to search within the amenityfeatures text
 # The str_detect() function might be useful, or you could use grepl()
-```
+
+womenlocs <- grep("G", gayguides$amenityfeatures, ignore.case = TRUE)
+gg.women <- gayguides[womenlocs,]
+print(gg.women)
+t```
 
 ### Challenge 2: Boston Women Voters
 
 Load the Boston Women Voters dataset and use subsetting to answer these historical questions:
 ```{r}
-
+data(BostonWomenVoters)
 ```
 
 (@) Find all women voters who were over 50 years old. Then find all the voters who were under the age of 50. How many were there? What can you say about the age distribution of women voters?
 ```{r}
 str(BostonWomenVoters)
 over.50 <- BostonWomenVoters$Age>50
-
 under.50 <- BostonWomenVoters$Age<50
 nrow(BostonWomenVoters[over.50,])
 nrow(BostonWomenVoters[under.50,])
@@ -281,11 +297,16 @@ nrow(BostonWomenVoters[under.50,])
 
 (@) Can you create a subset that includes only women voters who lived on "Main" street (the street name contains "Main")? How many were there? # Hint: You'll need to search within the street column. This will require a bit of googling and reading documentation. Look for a function that will allow you to search within a column.
 ```{r}
-
+mainst <- grep("Main", BostonWomenVoters$Street.of.Residence.on.April.1)
+bwv.mainst <- BostonWomenVoters[mainst,]
 ```
 
 (@) Using subsetting techniques, can you find the occupations of the five oldest women in the dataset? What were they?
 ```{r}
 # Hint: You might need to order the data first, then subset
 # The order() function could be helpful
+age.order <- order(BostonWomenVoters$Age, decreasing = TRUE)
+by.age <- BostonWomenVoters[age.order,]
+eldest <- head(by.age)
+eldest$Occupation
 ```
