finished choices section of worksheet 3

--- a/3-Loops-Conditionals-Functions.qmd
+++ b/3-Loops-Conditionals-Functions.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Worksheet 3: Loops, Conditionals and Functions"
-author: ""
-date: ""
+author: "Emma Stewart"
+date: "2-10-26"
 ---
 
 _This is the third in a series of worksheets for History 8500 at Clemson University. The goal of these worksheets is simple: practice, practice, practice. The worksheet introduces concepts and techniques and includes prompts for you to practice in this interactive document. When you are finished, you should change the author name (above), render your document to a pdf, and upload it to canvas. Don't forget to commit your changes as you go and push to github when you finish the worksheet._
@@ -67,22 +67,38 @@ if (x > 90) {
 
 (@) You are teaching History 100 for Clemson. Write an `if` statement that calculates whether the enrollment cap of 30 on your class has been met. 
 ```{r}
-
+s <- 10 
+if (s >= 30) {
+  "enrollment cap is met"
+}
 ```
 
 (@) Create a list of presidents and store it in a variable. Use an `if` statement to check if the number of presidents in the list is more than 5. If its not, indicate that too. 
 ```{r}
-
+presidents <- c("Washington", "Adams", "Jefferson", "Madison")
+if (length(presidents) > 5) {
+  "yes"
+} else {
+  "no"
+}
 ```
 
 (@) You can also use an if statement to check a variable in a dataframe. How might you use an if statement to check if the GayGuides dataset contains any year after 1990? (Hint: first try to figure out how to determine the latest year in the dataframe and then build an if statement that checks that and prints something out if its true or false. You should think about what kind of value in contained in the Year column, how to access it, and how to check for the latest value.) 
 
 ```{r}
+max(gayguides$Year)
+
+if (max(gayguides$Year > 1990)) {
+  "there are years after 1990"
+} else {
+  "no years after 1990"
+}
+
 ```
 
 (@) Reflect on the question above. How did you figure this out? What was the process you went through to build this chunk of code?
 
-> 
+> First, I decided that the best way to figure out the max year value would be with the max() function. Then, I used that function inside the if statement to test, specifically, the year column of the data set. 
 
 #### Loops
 
