finished mutate section on worksheet 4

--- a/4-BasicDataManipulation.qmd
+++ b/4-BasicDataManipulation.qmd
@@ -113,13 +113,15 @@ statepopulations %>% mutate(difference = X1900 - X1800)
 
 (@) In the Boston Women Voters dataset, every voter is given an age. Can you use their age to calculate each person's birth year? (Assume all this data was collected in 1920.)
 ```{r}
-
+data(BostonWomenVoters)
+birthyear <- BostonWomenVoters %>% mutate(birthyear = 1920 - Age)
+str(BostonWomenVoters)
 ```
 
 (@) Can you create a new column that combines the city and state columns in `gayguides` into a new column called location? It should list the city, state. (i.e. San Diego, CA)
 
 ```{r}
-
+locs <- gayguides %>% mutate(location = paste(city, state, sep=", "))
 ```
 
 ### Working with Text: Introduction to `stringr`
